// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/auto-complete/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-show-search"
    style="width:200px"
  >
    <div
      class="dcloud-select-selector"
    >
      <span
        class="dcloud-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="dcloud-select-selection-search-input"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="dcloud-select-selection-placeholder"
      >
        input here
      </span>
    </div>
  </div>,
  "1": <br />,
  "2": <br />,
  "3": <div
    class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-show-search"
    style="width:200px"
  >
    <div
      class="dcloud-select-selector"
    >
      <span
        class="dcloud-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="dcloud-select-selection-search-input"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="dcloud-select-selection-placeholder"
      >
        control mode
      </span>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 4,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/auto-complete/demo/certain-category.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-customize-input dcloud-select-show-search"
    style="width:250px"
  >
    <div
      class="dcloud-select-selector"
    >
      <span
        class="dcloud-select-selection-search"
      >
        <span
          class="dcloud-input-group-wrapper dcloud-input-group-wrapper-lg dcloud-input-search dcloud-input-search-large dcloud-select-selection-search-input"
        >
          <span
            class="dcloud-input-wrapper dcloud-input-group"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autocomplete="off"
              class="dcloud-input dcloud-input-lg"
              placeholder="input here"
              role="combobox"
              type="search"
              value=""
            />
            <span
              class="dcloud-input-group-addon"
            >
              <button
                class="dcloud-btn dcloud-btn-lg dcloud-btn-icon-only dcloud-input-search-button"
                type="button"
              >
                <span
                  aria-label="search"
                  class="anticon anticon-search"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
      </span>
      <span
        class="dcloud-select-selection-placeholder"
      />
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/auto-complete/demo/custom.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-customize-input dcloud-select-show-search"
    style="width:200px"
  >
    <div
      class="dcloud-select-selector"
    >
      <span
        class="dcloud-select-selection-search"
      >
        <textarea
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="dcloud-input dcloud-select-selection-search-input custom"
          placeholder="input here"
          role="combobox"
          style="height:50px"
          type="search"
        />
      </span>
      <span
        class="dcloud-select-selection-placeholder"
      />
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/auto-complete/demo/form-debug.md correctly 1`] = `
LoadedCheerio {
  "0": <form
    class="dcloud-form dcloud-form-horizontal"
    style="margin:0 auto"
  >
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label dcloud-col-xs-24 dcloud-col-sm-8"
        >
          <label
            class=""
            title="单独 AutoComplete"
          >
            单独 AutoComplete
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control dcloud-col-xs-24 dcloud-col-sm-16"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-show-search"
              >
                <div
                  class="dcloud-select-selector"
                >
                  <span
                    class="dcloud-select-selection-search"
                  >
                    <input
                      aria-activedescendant="undefined_list_0"
                      aria-autocomplete="list"
                      aria-controls="undefined_list"
                      aria-haspopup="listbox"
                      aria-owns="undefined_list"
                      autocomplete="off"
                      class="dcloud-select-selection-search-input"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="dcloud-select-selection-placeholder"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label dcloud-col-xs-24 dcloud-col-sm-8"
        >
          <label
            class=""
            title="单独 TreeSelect"
          >
            单独 TreeSelect
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control dcloud-col-xs-24 dcloud-col-sm-16"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-select dcloud-tree-select dcloud-select-single dcloud-select-show-arrow"
              >
                <div
                  class="dcloud-select-selector"
                >
                  <span
                    class="dcloud-select-selection-search"
                  >
                    <input
                      aria-activedescendant="undefined_list_0"
                      aria-autocomplete="list"
                      aria-controls="undefined_list"
                      aria-haspopup="listbox"
                      aria-owns="undefined_list"
                      autocomplete="off"
                      class="dcloud-select-selection-search-input"
                      readonly=""
                      role="combobox"
                      style="opacity:0"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="dcloud-select-selection-placeholder"
                  />
                </div>
                <span
                  aria-hidden="true"
                  class="dcloud-select-arrow"
                  style="user-select:none;-webkit-user-select:none"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down dcloud-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label dcloud-col-xs-24 dcloud-col-sm-8"
        >
          <label
            class=""
            title="添加 Input.Group 正常"
          >
            添加 Input.Group 正常
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control dcloud-col-xs-24 dcloud-col-sm-16"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <span
                class="dcloud-input-group dcloud-input-group-compact"
              >
                <div
                  class="dcloud-select dcloud-tree-select dcloud-select-single dcloud-select-show-arrow"
                  style="width:30%"
                >
                  <div
                    class="dcloud-select-selector"
                  >
                    <span
                      class="dcloud-select-selection-search"
                    >
                      <input
                        aria-activedescendant="undefined_list_0"
                        aria-autocomplete="list"
                        aria-controls="undefined_list"
                        aria-haspopup="listbox"
                        aria-owns="undefined_list"
                        autocomplete="off"
                        class="dcloud-select-selection-search-input"
                        readonly=""
                        role="combobox"
                        style="opacity:0"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="dcloud-select-selection-placeholder"
                    />
                  </div>
                  <span
                    aria-hidden="true"
                    class="dcloud-select-arrow"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down dcloud-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-show-search"
                >
                  <div
                    class="dcloud-select-selector"
                  >
                    <span
                      class="dcloud-select-selection-search"
                    >
                      <input
                        aria-activedescendant="undefined_list_0"
                        aria-autocomplete="list"
                        aria-controls="undefined_list"
                        aria-haspopup="listbox"
                        aria-owns="undefined_list"
                        autocomplete="off"
                        class="dcloud-select-selection-search-input"
                        role="combobox"
                        type="search"
                        value=""
                      />
                    </span>
                    <span
                      class="dcloud-select-selection-placeholder"
                    />
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label dcloud-col-xs-24 dcloud-col-sm-8"
        >
          <label
            class=""
            title="包含 search 图标正常"
          >
            包含 search 图标正常
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control dcloud-col-xs-24 dcloud-col-sm-16"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-customize-input dcloud-select-show-search"
              >
                <div
                  class="dcloud-select-selector"
                >
                  <span
                    class="dcloud-select-selection-search"
                  >
                    <span
                      class="dcloud-input-affix-wrapper dcloud-select-selection-search-input"
                    >
                      <input
                        aria-activedescendant="undefined_list_0"
                        aria-autocomplete="list"
                        aria-controls="undefined_list"
                        aria-haspopup="listbox"
                        aria-owns="undefined_list"
                        autocomplete="off"
                        class="dcloud-input"
                        role="combobox"
                        type="search"
                        value=""
                      />
                      <span
                        class="dcloud-input-suffix"
                      >
                        <span
                          aria-label="search"
                          class="anticon anticon-search"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="dcloud-select-selection-placeholder"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label dcloud-col-xs-24 dcloud-col-sm-8"
        >
          <label
            class=""
            title="同时有 Input.Group 和图标发生移位"
          >
            同时有 Input.Group 和图标发生移位
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control dcloud-col-xs-24 dcloud-col-sm-16"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <span
                class="dcloud-input-group dcloud-input-group-compact"
              >
                <div
                  class="dcloud-select dcloud-tree-select dcloud-select-single dcloud-select-show-arrow"
                  style="width:30%"
                >
                  <div
                    class="dcloud-select-selector"
                  >
                    <span
                      class="dcloud-select-selection-search"
                    >
                      <input
                        aria-activedescendant="undefined_list_0"
                        aria-autocomplete="list"
                        aria-controls="undefined_list"
                        aria-haspopup="listbox"
                        aria-owns="undefined_list"
                        autocomplete="off"
                        class="dcloud-select-selection-search-input"
                        readonly=""
                        role="combobox"
                        style="opacity:0"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="dcloud-select-selection-placeholder"
                    />
                  </div>
                  <span
                    aria-hidden="true"
                    class="dcloud-select-arrow"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down dcloud-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-customize-input dcloud-select-show-search"
                >
                  <div
                    class="dcloud-select-selector"
                  >
                    <span
                      class="dcloud-select-selection-search"
                    >
                      <span
                        class="dcloud-input-affix-wrapper dcloud-select-selection-search-input"
                      >
                        <input
                          aria-activedescendant="undefined_list_0"
                          aria-autocomplete="list"
                          aria-controls="undefined_list"
                          aria-haspopup="listbox"
                          aria-owns="undefined_list"
                          autocomplete="off"
                          class="dcloud-input"
                          role="combobox"
                          type="search"
                          value=""
                        />
                        <span
                          class="dcloud-input-suffix"
                        >
                          <span
                            aria-label="search"
                            class="anticon anticon-search"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="search"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="dcloud-select-selection-placeholder"
                    />
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label dcloud-col-xs-24 dcloud-col-sm-8"
        >
          <label
            class=""
            title="同时有 Input.Group 和 Search 组件发生移位"
          >
            同时有 Input.Group 和 Search 组件发生移位
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control dcloud-col-xs-24 dcloud-col-sm-16"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <span
                class="dcloud-input-group dcloud-input-group-compact"
              >
                <div
                  class="dcloud-select dcloud-tree-select dcloud-select-single dcloud-select-show-arrow"
                  style="width:30%"
                >
                  <div
                    class="dcloud-select-selector"
                  >
                    <span
                      class="dcloud-select-selection-search"
                    >
                      <input
                        aria-activedescendant="undefined_list_0"
                        aria-autocomplete="list"
                        aria-controls="undefined_list"
                        aria-haspopup="listbox"
                        aria-owns="undefined_list"
                        autocomplete="off"
                        class="dcloud-select-selection-search-input"
                        readonly=""
                        role="combobox"
                        style="opacity:0"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="dcloud-select-selection-placeholder"
                    />
                  </div>
                  <span
                    aria-hidden="true"
                    class="dcloud-select-arrow"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down dcloud-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-customize-input dcloud-select-show-search"
                >
                  <div
                    class="dcloud-select-selector"
                  >
                    <span
                      class="dcloud-select-selection-search"
                    >
                      <span
                        class="dcloud-input-group-wrapper dcloud-input-search dcloud-select-selection-search-input"
                      >
                        <span
                          class="dcloud-input-wrapper dcloud-input-group"
                        >
                          <input
                            aria-activedescendant="undefined_list_0"
                            aria-autocomplete="list"
                            aria-controls="undefined_list"
                            aria-haspopup="listbox"
                            aria-owns="undefined_list"
                            autocomplete="off"
                            class="dcloud-input"
                            role="combobox"
                            type="search"
                            value=""
                          />
                          <span
                            class="dcloud-input-group-addon"
                          >
                            <button
                              class="dcloud-btn dcloud-btn-icon-only dcloud-input-search-button"
                              type="button"
                            >
                              <span
                                aria-label="search"
                                class="anticon anticon-search"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="search"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="dcloud-select-selection-placeholder"
                    />
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-form-item-label dcloud-col-xs-24 dcloud-col-sm-8"
        >
          <label
            class=""
            title="Input Group 和 Button 结合"
          >
            Input Group 和 Button 结合
          </label>
        </div>
        <div
          class="dcloud-col dcloud-form-item-control dcloud-col-xs-24 dcloud-col-sm-16"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <span
                class="dcloud-input-group dcloud-input-group-compact"
              >
                <div
                  class="dcloud-select dcloud-tree-select dcloud-select-single dcloud-select-show-arrow"
                  style="width:20%"
                >
                  <div
                    class="dcloud-select-selector"
                  >
                    <span
                      class="dcloud-select-selection-search"
                    >
                      <input
                        aria-activedescendant="undefined_list_0"
                        aria-autocomplete="list"
                        aria-controls="undefined_list"
                        aria-haspopup="listbox"
                        aria-owns="undefined_list"
                        autocomplete="off"
                        class="dcloud-select-selection-search-input"
                        readonly=""
                        role="combobox"
                        style="opacity:0"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                    </span>
                    <span
                      class="dcloud-select-selection-placeholder"
                    />
                  </div>
                  <span
                    aria-hidden="true"
                    class="dcloud-select-arrow"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="on"
                  >
                    <span
                      aria-label="down"
                      class="anticon anticon-down dcloud-select-suffix"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-customize-input dcloud-select-show-search"
                >
                  <div
                    class="dcloud-select-selector"
                  >
                    <span
                      class="dcloud-select-selection-search"
                    >
                      <span
                        class="dcloud-input-group-wrapper dcloud-input-search dcloud-select-selection-search-input"
                      >
                        <span
                          class="dcloud-input-wrapper dcloud-input-group"
                        >
                          <input
                            aria-activedescendant="undefined_list_0"
                            aria-autocomplete="list"
                            aria-controls="undefined_list"
                            aria-haspopup="listbox"
                            aria-owns="undefined_list"
                            autocomplete="off"
                            class="dcloud-input"
                            role="combobox"
                            type="search"
                            value=""
                          />
                          <span
                            class="dcloud-input-group-addon"
                          >
                            <button
                              class="dcloud-btn dcloud-btn-icon-only dcloud-input-search-button"
                              type="button"
                            >
                              <span
                                aria-label="search"
                                class="anticon anticon-search"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="search"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="dcloud-select-selection-placeholder"
                    />
                  </div>
                </div>
                <button
                  class="dcloud-btn dcloud-btn-primary"
                  type="button"
                >
                  <span
                    aria-label="search"
                    class="anticon anticon-search"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </span>
                  <span>
                    Search
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/auto-complete/demo/non-case-sensitive.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-show-search"
    style="width:200px"
  >
    <div
      class="dcloud-select-selector"
    >
      <span
        class="dcloud-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="dcloud-select-selection-search-input"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="dcloud-select-selection-placeholder"
      >
        try to type \`b\`
      </span>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/auto-complete/demo/options.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-show-search"
    style="width:200px"
  >
    <div
      class="dcloud-select-selector"
    >
      <span
        class="dcloud-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="dcloud-select-selection-search-input"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="dcloud-select-selection-placeholder"
      >
        input here
      </span>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/auto-complete/demo/uncertain-category.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-select dcloud-select-auto-complete dcloud-select-single dcloud-select-customize-input dcloud-select-show-search"
    style="width:300px"
  >
    <div
      class="dcloud-select-selector"
    >
      <span
        class="dcloud-select-selection-search"
      >
        <span
          class="dcloud-input-group-wrapper dcloud-input-group-wrapper-lg dcloud-input-search dcloud-input-search-large dcloud-input-search-with-button dcloud-select-selection-search-input"
        >
          <span
            class="dcloud-input-wrapper dcloud-input-group"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autocomplete="off"
              class="dcloud-input dcloud-input-lg"
              placeholder="input here"
              role="combobox"
              type="search"
              value=""
            />
            <span
              class="dcloud-input-group-addon"
            >
              <button
                class="dcloud-btn dcloud-btn-primary dcloud-btn-lg dcloud-input-search-button"
                type="button"
              >
                <span
                  aria-label="search"
                  class="anticon anticon-search"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
      </span>
      <span
        class="dcloud-select-selection-placeholder"
      />
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
